@@ -8,6 +8,7 @@ Improvements:
 
  - Status view: improve "on branch" information inspired by the prompt
    code in git's bash completion script.
+ - Colors for 256-capable terminals can be specified as colorN.
 
 tig-0.14
 --------
